2011-02-15 Javier Lanz <javier.lanz@artica.es>
	* godmode/users/configure_user.php: Truncated group name on user detail
	editor
	* godmode/groups/group_list.php: Changed ACL checkings

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/functions_db.php: added in function "get_agent_modules" the
	default value null for get modules of agents in user's group.
	
	* godmode/massive/massive_delete_modules.php: fixed the select of modules
	now get only the modules of agents in user's group and now you can delete
	and view correcly the modules with acent or other not ascii characters.

	Fixes: #3182143 and #3175722

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>
	
	Merged bugfix from trunk
	
	* godmode/groups/group_list.php: refixed the position of check login for
	check in normal access and ajax access.

2011-02-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/menu.php: "godmode > manage alert > commands" tab only 
	displayed when user privileges are "PM".
	* pandoradb_data.sql: Changed "Alert management" field to 1 in 
	"Chief Operator" row of tperfil table.
	* godmode/alerts/alert_templates.php: If user tries to delete a 
	template with group=ALL then must have "PM" access privileges.
	* godmode/alerts/configure_alert_template.php: If user tries to duplicate
	/edit a template with group=ALL then must have "PM" access privileges.
	* godmode/alerts/alert_actions.php: If user tries to duplicate/delete an 
	action with group=ALL then must have "PM" access privileges.
	* godmode/alerts/configure_alert_action.php: If user tries to edit an 
	action with group=ALL then must have "PM" access privileges.

	Fixes: #3180735	

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>
	
	Merged bugfix from trunk
	
	* godmode/agentes/module_manager.php: erased the "prediction module" for
	policy view.
	
	Fixes: #3175826

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>
	
	Merged bugfix from trunk
