@@ -1,3 +1,12 @@
+2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk
+
+	* include/functions_alerts.php, operation/agentes/estado_agente.php: added
+	check ACL in the show actions in the creation and edit of alerts.
+	
+	Fixes: #3166657
+
 2011-02-15 Javier Lanz <javier.lanz@artica.es>
 	* godmode/users/configure_user.php: Truncated group name on user detail
 	editor
